log/build_2023-01-17_19-31-36/ariac_gui/stdout_stderr.log
running egg_info
writing ../../build/ariac_gui/ariac_gui.egg-info/PKG-INFO
writing dependency_links to ../../build/ariac_gui/ariac_gui.egg-info/dependency_links.txt
writing entry points to ../../build/ariac_gui/ariac_gui.egg-info/entry_points.txt
writing requirements to ../../build/ariac_gui/ariac_gui.egg-info/requires.txt
writing top-level names to ../../build/ariac_gui/ariac_gui.egg-info/top_level.txt
package init file 'ariac_gui/__init__.py' not found (or not a regular file)
reading manifest file '../../build/ariac_gui/ariac_gui.egg-info/SOURCES.txt'
writing manifest file '../../build/ariac_gui/ariac_gui.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/ubuntu/ariac_ws/install/ariac_gui/lib/python3.8/site-packages/ariac_gui/newGui.py to newGui.cpython-38.pyc
  File "/home/ubuntu/ariac_ws/install/ariac_gui/lib/python3.8/site-packages/ariac_gui/newGui.py", line 7
    from ariac_gui/Functions.checkCancel import *
                  ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/ubuntu/ariac_ws/install/ariac_gui/lib/python3.8/site-packages/ariac_gui-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/ariac_gui/ariac_gui.egg-info to /home/ubuntu/ariac_ws/install/ariac_gui/lib/python3.8/site-packages/ariac_gui-0.0.0-py3.8.egg-info
running install_scripts
Installing gui script to /home/ubuntu/ariac_ws/install/ariac_gui/lib/ariac_gui
writing list of installed files to '/home/ubuntu/ariac_ws/build/ariac_gui/install.log'
